--- a/404 MRO Team/Packages/manifest.json
+++ b/404 MRO Team/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
+    "com.unity.2d.spriteshape": "9.0.5",
     "com.unity.ai.navigation": "1.1.6",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.feature.development": "1.0.1",
